2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) proc: string-xrep

	* postgres-qcons.scm: Import SRFI 13 ‘string-prefix?’; import SRFI 14
	‘char-set:full’, ‘char-set-filter’, ‘char-set-size’, ‘char-set-union’,
	‘char-set-for-each’, ‘ucs-range->char-set’.
	(string external representation): New titled comment block.
	(string-xrep): New proc, exported.

2012-02-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Fix bug: Make ‘sql-quote’ do backslash octal substitution.

	* postgres-qcons.scm: Import some SRFI 13 procs.
	(sql-quote): Rename arg to ‘string’; prior to ‘E’ processing,
	replace all ‘#\\’ with the string ‘x#\\’, ‘#\1’, ‘#\3’, ‘#\4’.
	* postgres-types.scm (bytea) <stringifier>: Output single ‘#\\’.

2012-01-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Tweak implementation of 1.8+ C->Scheme conversion.

	* libpq.c [!GI_LEVEL_NOT_YET_1_8] (_finangle): New static func.
	[!GI_LEVEL_NOT_YET_1_8] (_FINANGLE): Use ‘_finangle’.

2011-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.42 (tag v0.42)

2011-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Make ‘pg-set-client-encoding!’ also accept a symbol.

	* libpq.c (pg_set_client_encoding_x): If ENCODING
	is a symbol, convert it to a string internally.

2011-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Make ‘pq-print’ flush its output stream.

	* libpq.c (pg_print): Call ‘fflush’ right after calling ‘PQprint’.

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.41 (tag v0.41)

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq doc] Fix bug: Include ‘pg-get-copy-data’ arg ‘async?’ in docstring.

	* libpq.c (pg_get_copy_data): Describe ‘asyncp’ in
	docstring; add docstring option to display it as "async?".

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq doc] Add "WILL BE REMOVED" to some docstrings.

	* libpq.c (pg_getline, pg_getlineasync):
	Mention planned retirement in docstring.

2011-09-28  Thien-Thi Nguyen  <ttn@gnuvola.org>
